# STARpp

./: CMakeLists.txt  README.md
.github/workflows/: build-project.yml  build-starcalc-linux.yml  build-starcalc-windows.yml  build-starpp-linux.yml  build-starpp-windows.yml  master-pull-request-checks.yml  master-pull-request-merge-reaction.yml  push-reaction.yml
app/: CMakeLists.txt
app/src/: core.cpp  core.h  errorcode.h  main.cpp  referenceelectionconfig.h  resultspresenter.cpp  resultspresenter.h
cmake/module/STARpp/: Testing.cmake
cmake/module/StarCalc/: Testing.cmake
doc/: CMakeLists.txt
doc/cmake/config/: doxyconf.cmake  qttags.cmake
doc/cmake/file_templates/: doc_mainpage.md.in  mainpage.md.in
doc/general/: namespace.dox
doc/res/: DoxygenLayout.xml  header.html
doc/res/snippets/: reference.cpp
doc/res/theme/doxygen-awesome/: doxygen-awesome-customize.css
lib/: CMakeLists.txt
lib/include/star/: calculator.h  election.h  electionresult.h  expectedelectionresult.h  qualifierresult.h  rank.h  reference.h  seat.h
lib/include/starcalc/: election.h  reference.h
lib/src/: calculator.cpp  dummy_p.h  election.cpp  electionresult.cpp  expectedelectionresult.cpp  headtoheadresults.cpp  headtoheadresults.h  qualifierresult.cpp  rank.cpp  reference.cpp  seat.cpp
lib/src/reference/: ballotbox_p.cpp  ballotbox_p.h  calculatoroptions_p.cpp  calculatoroptions_p.h  categoryconfig_p.cpp  categoryconfig_p.h  resultset_p.cpp  resultset_p.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/_common/: CMakeLists.txt
tests/_common/include/: star_test_common.h
tests/full_reference_election/: CMakeLists.txt  tst_full_reference_election.cpp
tests/full_reference_election/data/: basic_election_sampler.csv  basic_election_sampler.ini  basic_election_sampler.json  basic_election_sampler.opt  pfcc_2022_anon.csv  pfcc_2022_anon.ini  pfcc_2022_anon.json  pfcc_2022_anon.opt
tests/ties/: CMakeLists.txt  tst_ties.cpp
